# opentofu-semaphore-ansible

./: pyproject.toml
ansible/: ansible.cfg
ansible/inventory/: docker_containers.docker.yaml
ansible/playbooks/: ansible-config.yaml  deploy-python.yaml  selenium-scrapper.yaml  setup-hourly-scripts.yaml  system-monitor.yaml
ansible/python_scripts/: requirements.txt  selenium_form.py  system_monitor.py
elk/elasticsearch/: elasticsearch.yaml
elk/filebeat/: filebeat.yaml
elk/kibana/: kibana.yaml
elk/logstash/: logstash.conf  pipelines.yaml
opentofu/: .terraform.lock.hcl  main.tf
scripts/: cleanup.sh  setup-kibana.sh  setup.sh
semaphore/: .dockerignore  Dockerfile  docker-compose.yaml  init-mysql.sql
